# python-fastapi

./: README.md
fastapi/: pyproject.toml
fastapi/todos/: main.py
